force-app/main/default/objects/Account/fields/EnderecoCompletoSemNumero__c.field-meta.xml
<CustomField>
    <fullName>EnderecoCompletoSemNumero__c</fullName>
    <label>Endereço Completo Sem Número</label>
    <length>100</length>
    <type>Text</type>
</CustomField>