force-app/main/default/objects/Account/fields/EnderecoEstado__c.field-meta.xml
<CustomField>
    <fullName>EnderecoEstado__c</fullName>
    <inlineHelpText>Informe a UF do endereço principal da conta.</inlineHelpText>
    <label>Estado do Endereço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EstadosFederacao</valueSetName>
    </valueSet>
</CustomField>