force-app/main/default/objects/Account/fields/NextMeetingDate__c.field-meta.xml
<CustomField>
    <fullName>NextMeetingDate__c</fullName>
    <inlineHelpText>Próxima data de visita.</inlineHelpText>
    <label>Next Meeting</label>
    <type>Date</type>
</CustomField>