force-app/main/default/objects/Account/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Campo autoincremento para teste de Trigger - Bootcamp 7</description>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>