force-app/main/default/objects/Account/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Vendedor__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>