force-app/main/default/objects/Account/validationRules/CEPContaObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>CEPContaObrigatorio</fullName>
    <active>true</active>
    <description>A regra impedirá que o registro seja salvo SE o campo CEP não tiver exatamente 8 caracteres numéricos, sem caracteres especiais.</description>
    <errorConditionFormula>NOT(REGEX(CEP__c, &quot;[0-9]{8}&quot;)) &amp;&amp; LEN(CEP__c) &lt;&gt; 8</errorConditionFormula>
    <errorMessage>Informe um CEP válido! O valor precisa possuir 8 dígitos numéricos.</errorMessage>
</ValidationRule>